# caffe

examples/: CMakeLists.txt
examples/12306/: 12306_solver.prototxt  12306_train_test.prototxt  convert_saz_siamese_data.cpp  train_model.sh
examples/12306/util/: base64.cpp  base64.h  fileutil.cpp  fileutil.h
examples/12306/util/json/: json.h
src/caffe/: data_transformer.cpp
src/caffe/proto/: caffe.proto
tools/: class_appearance.cpp
